replace rabbitmq with kafka to support event-driven microservices communication and the current event model(ChallengeSolvedEvent) needs to be in the same package in different microservices projects otherwise deserialize errors happen.

--- a/gateway/src/main/resources/bootstrap.yml
+++ b/gateway/src/main/resources/bootstrap.yml
@@ -3,10 +3,11 @@ spring:
     consul:
       config:
         data-key: application.yml
-        prefix: config
         format: yaml
         default-context: defaults
-logging:
-  level:
-    org.springframework.amqp.rabbit.connection.CachingConnectionFactory: WARN
+        prefixes:
+          - config
+#logging:
+  #level:
+    #org.springframework.amqp.rabbit.connection.CachingConnectionFactory: WARN
 
