--- a/multiplication/src/main/resources/application.properties
+++ b/multiplication/src/main/resources/application.properties
@@ -11,8 +11,15 @@ spring.jpa.hibernate.ddl-auto=update
 # Gamification service URL
 service.gamification.host=http://localhost:8081
 
-amqp.exchange.attempts=attempts.topic
+kafka.attempts=attempts.topic
+kafka.attempts.partitions=4
+kafka.attempts.replica-count=2
 
-# Shows declaration of exchanges, queues, bindings, etc.
-logging.level.org.springframework.amqp.rabbit.core.RabbitAdmin=DEBUG
+logging.level.org.springframework.kafka.core.KafkaAdmin=DEBUG
 #spring.config.import=optional:consul:
+
+spring.kafka.bootstrap-servers=localhost:19092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
+
