--- a/gamification/src/main/resources/application.properties
+++ b/gamification/src/main/resources/application.properties
@@ -9,10 +9,22 @@ spring.jpa.hibernate.ddl-auto=update
 # For educational purposes we will show the SQL in console
 # spring.jpa.show-sql=true
 
-amqp.exchange.attempts=attempts.topic
-amqp.queue.gamification=gamification.queue
+#config both on the producer and consumer as we donot know which one will start first
+kafka.attempts=attempts.topic
+kafka.attempts.partitions=4
+kafka.attempts.replica-count=2
 
-# Shows declaration of exchanges, queues, bindings, etc.
-logging.level.org.springframework.amqp.rabbit.core.RabbitAdmin=DEBUG
+logging.level.org.springframework.kafka.core.KafkaAdmin=DEBUG
 #spring.config.import=optional:consul:
 spring.cloud.compatibility-verifier.enabled=false
+
+spring.kafka.bootstrap-servers=localhost:19092
+spring.kafka.consumer.group-id: gamification
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+#spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+spring.kafka.consumer.properties.spring.deserializer.value.delegate.class=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
+#spring.kafka.consumer.properties.spring.json.use.type.headers=false
+#spring.kafka.consumer.properties.spring.json.value.default.type=microservices.book.event.challenge.ChallengeSolvedEvent
