add kafka appender to collect logs from different microservice instances to send to different kafka partitions for console logging kafka key [host-port-applicationId] and serializer format byte[]/byte[]

--- a/gamification/pom.xml
+++ b/gamification/pom.xml
@@ -86,10 +86,14 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
-        <dependency>
+<!--        <dependency>
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-tracing-bridge-brave</artifactId>
+        </dependency>-->
+        <dependency>
+            <groupId>com.github.danielwegener</groupId>
+            <artifactId>logback-kafka-appender</artifactId>
+            <version>0.2.0-RC2</version>
         </dependency>
     </dependencies>
     <dependencyManagement>
