--- a/gamification/src/main/resources/application.properties
+++ b/gamification/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.cloud.compatibility-verifier.enabled=false
 
 spring.kafka.bootstrap-servers=localhost:19092
 spring.kafka.consumer.group-id: gamification
-spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.auto-offset-reset=latest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 #spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
@@ -28,3 +28,5 @@ spring.kafka.consumer.properties.spring.deserializer.value.delegate.class=org.sp
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
 #spring.kafka.consumer.properties.spring.json.use.type.headers=false
 #spring.kafka.consumer.properties.spring.json.value.default.type=microservices.book.event.challenge.ChallengeSolvedEvent
+
+##logging.pattern.level=[${spring.application.name:?},%X{traceId:-},%X{spanId:-}]
