--- a/multiplication/pom.xml
+++ b/multiplication/pom.xml
@@ -91,12 +91,16 @@
 			</exclusions>
 		</dependency>
 
- 		<dependency>
+<!-- 		<dependency>
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-tracing-bridge-brave</artifactId>
-        </dependency>
+        </dependency>-->
 
-
+		<dependency>
+			<groupId>com.github.danielwegener</groupId>
+			<artifactId>logback-kafka-appender</artifactId>
+			<version>0.2.0-RC2</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
