--- a/multiplication/src/main/resources/bootstrap.properties
+++ b/multiplication/src/main/resources/bootstrap.properties
@@ -1,5 +1,5 @@
-spring.cloud.consul.config.prefix=config
+spring.cloud.consul.config.prefixes[0]=config
 spring.cloud.consul.config.format=yaml
 spring.cloud.consul.config.default-context=defaults
 spring.cloud.consul.config.data-key=application.yml
-logging.level.org.springframework.amqp.rabbit.connection.CachingConnectionFactory=WARN
+#logging.level.org.springframework.amqp.rabbit.connection.CachingConnectionFactory=WARN
