add micrometer-tracing to add traceid and spanid to the requests

--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -54,6 +54,22 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-consul-config</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-observation</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-tracing</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-tracing-bridge-brave</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.zipkin.reporter2</groupId>
+            <artifactId>zipkin-reporter-brave</artifactId>
+        </dependency>
 
 <!--        <dependency>
             <groupId>io.micrometer</groupId>
@@ -74,7 +90,7 @@
             <artifactId>spring-boot-starter-log4j2</artifactId>
         </dependency>-->
 
-        <!--logback logs to kafka-->
+        <!--logback logs to kafka[logback-kafka-appender] which is using native kafka client, not spring kafka-->
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
