--- a/gamification/src/main/resources/application.properties
+++ b/gamification/src/main/resources/application.properties
@@ -18,8 +18,10 @@ logging.level.org.springframework.kafka.core.KafkaAdmin=DEBUG
 #spring.config.import=optional:consul:
 spring.cloud.compatibility-verifier.enabled=false
 
+spring.kafka.template.observation-enabled=true
+spring.kafka.listener.observation-enabled=true
 spring.kafka.bootstrap-servers=localhost:19092
-spring.kafka.consumer.group-id: gamification
+spring.kafka.consumer.group-id=gamification
 spring.kafka.consumer.auto-offset-reset=latest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 #spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
@@ -29,4 +31,8 @@ spring.kafka.consumer.properties.spring.json.trusted.packages=*
 #spring.kafka.consumer.properties.spring.json.use.type.headers=false
 #spring.kafka.consumer.properties.spring.json.value.default.type=microservices.book.event.challenge.ChallengeSolvedEvent
 
-##logging.pattern.level=[${spring.application.name:?},%X{traceId:-},%X{spanId:-}]
+##working with default logback configuration for distributed tracing
+logging.pattern.level=[${spring.application.name:-},%X{traceId:-},%X{spanId:-}]
+logging.include-application-name=false
+management.tracing.sampling.probability=1
+
