--- a/multiplication/src/main/resources/application.properties
+++ b/multiplication/src/main/resources/application.properties
@@ -18,12 +18,16 @@ kafka.attempts.replica-count=2
 logging.level.org.springframework.kafka.core.KafkaAdmin=DEBUG
 #spring.config.import=optional:consul:
 
+#multiplication app as a producer
 spring.kafka.bootstrap-servers=localhost:19092
-spring.kafka.consumer.group-id: multiplication
-spring.kafka.consumer.auto-offset-reset=latest
-spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
-spring.kafka.consumer.properties.spring.deserializer.value.delegate.class=org.springframework.kafka.support.serializer.JsonDeserializer
-spring.kafka.consumer.properties.spring.json.trusted.packages=*
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.template.observation-enabled=true
+spring.kafka.listener.observation-enabled=true
+
+##working with default logback configuration for distributed tracing
+logging.pattern.level=[${spring.application.name:-},%X{traceId:-},%X{spanId:-}]
+logging.include-application-name=false
+management.tracing.sampling.probability=1
 
 
