--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -10,8 +10,10 @@ services:
     environment:
       - SPRING_PROFILES_ACTIVE=docker
       - SPRING_CLOUD_CONSUL_HOST=consul
+      - SPRING_CLOUD_KAFKA_HOST=kafka
+      - SPRING_CLOUD_ZIPKIN_HOST=zipkin
     depends_on:
-      - rabbitmq-dev
+      - kafka
       - consul-importer
     networks:
       - microservices
@@ -20,8 +22,10 @@ services:
     environment:
       - SPRING_PROFILES_ACTIVE=docker
       - SPRING_CLOUD_CONSUL_HOST=consul
+      - SPRING_CLOUD_KAFKA_HOST=kafka
+      - SPRING_CLOUD_ZIPKIN_HOST=zipkin
     depends_on:
-      - rabbitmq-dev
+      - kafka
       - consul-importer
     networks:
       - microservices
@@ -32,8 +36,10 @@ services:
     environment:
       - SPRING_PROFILES_ACTIVE=docker
       - SPRING_CLOUD_CONSUL_HOST=consul
+      - SPRING_CLOUD_KAFKA_HOST=kafka
+      - SPRING_CLOUD_ZIPKIN_HOST=zipkin
     depends_on:
-      - rabbitmq-dev
+      - kafka
       - consul-importer
     networks:
       - microservices
@@ -42,8 +48,10 @@ services:
     environment:
       - SPRING_PROFILES_ACTIVE=docker
       - SPRING_CLOUD_CONSUL_HOST=consul
+      - SPRING_CLOUD_KAFKA_HOST=kafka
+      - SPRING_CLOUD_ZIPKIN_HOST=zipkin
     depends_on:
-      - rabbitmq-dev
+      - kafka
       - consul-importer
     networks:
       - microservices
@@ -54,7 +62,7 @@ services:
     networks:
       - microservices
   consul-dev:
-    image: consul:1.15.4
+    image: hashicorp/consul:1.19.0
     container_name: consul
     ports:
       - '8500:8500'
@@ -62,12 +70,42 @@ services:
     command: 'agent -dev -node=learnmicro -client=0.0.0.0 -log-level=INFO'
     networks:
       - microservices
-  rabbitmq-dev:
-    image: rabbitmq:3.12.10-management
-    container_name: rabbitmq
+  kafka:
+    image: 'bitnami/kafka:latest'
     ports:
-      - '5672:5672'
-      - '15672:15672'
+      - '9094:9094' #1
+    environment:
+      - KAFKA_CFG_NODE_ID=0
+      - KAFKA_CFG_CONTROLLER_BROKER_ID=0
+      - KAFKA_CFG_PROCESS_ROLES=controller,broker
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094 #2
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,EXTERNAL://localhost:9094 #3
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT #4
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka:9093
+      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+    networks:
+      - microservices
+  kafka-ui:
+    image: 'provectuslabs/kafka-ui:latest'
+    ports:
+      - '8080:8080'
+    depends_on:
+      - kafka
+    environment:
+      - KAFKA_CLUSTERS_0_NAME=local #5
+      - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=kafka:9092 #6
+    networks:
+      - microservices
+  zipkin:
+    image: 'openzipkin/zipkin'
+    container_name: zipkin
+    ports:
+      - 9411:9411
+    healthcheck:
+      test: wget --no-verbose --tries=1 --spider http://localhost:9411/health || exit 1
+      interval: 10s
+      timeout: 10s
+      retries: 3
     networks:
       - microservices
 networks:
