--- a/gamification/src/main/resources/application.properties
+++ b/gamification/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.cloud.compatibility-verifier.enabled=false
 
 spring.kafka.template.observation-enabled=true
 spring.kafka.listener.observation-enabled=true
-spring.kafka.bootstrap-servers=localhost:19092
+spring.kafka.bootstrap-servers=${SPRING_CLOUD_KAFKA_HOST:localhost}:9094
 spring.kafka.consumer.group-id=gamification
 spring.kafka.consumer.auto-offset-reset=latest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
