--- a/multiplication/src/main/resources/application.properties
+++ b/multiplication/src/main/resources/application.properties
@@ -8,18 +8,15 @@ spring.jpa.hibernate.ddl-auto=update
 # For educational purposes we will show the SQL in console
 # spring.jpa.show-sql=true
 
-# Gamification service URL
-service.gamification.host=http://localhost:8081
-
 kafka.attempts=attempts.topic
 kafka.attempts.partitions=4
-kafka.attempts.replica-count=2
+kafka.attempts.replica-count=1
 
 logging.level.org.springframework.kafka.core.KafkaAdmin=DEBUG
 #spring.config.import=optional:consul:
 
 #multiplication app as a producer
-spring.kafka.bootstrap-servers=localhost:19092
+spring.kafka.bootstrap-servers=${SPRING_CLOUD_KAFKA_HOST:localhost}:9094
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.template.observation-enabled=true
@@ -31,3 +28,7 @@ logging.include-application-name=false
 management.tracing.sampling.probability=1
 
 
+##logging.level.org.apache.kafka.clients.producer=DEBUG ##lead to deadlock
+
+#---
+spring.config.activate.on-profile=docker
