add configuration for docker compose deployment

--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -14,6 +14,8 @@ spring:
       discovery:
         # Get only services that are passing the health check
         query-passing: true
+      host: ${SPRING_CLOUD_CONSUL_HOST:localhost}
+      port: 8500
     gateway:
       routes:
         - id: multiplication
@@ -71,6 +73,9 @@ management:
         #include: health, gateway
     #propagation:
       #type: w3c
+  zipkin:
+    tracing:
+      endpoint: http://${SPRING_CLOUD_ZIPKIN_HOST:localhost}:9411/api/v2/spans
 ---
 spring:
   config:
@@ -88,3 +93,5 @@ spring:
               - "GET"
               - "POST"
               - "OPTIONS"
+  kafka:
+    bootstrap-servers: ${SPRING_CLOUD_KAFKA_HOST}:9092
