--- a/multiplication/src/main/resources/application.properties
+++ b/multiplication/src/main/resources/application.properties
@@ -26,9 +26,13 @@ spring.kafka.listener.observation-enabled=true
 logging.pattern.level=[${spring.application.name:-},%X{traceId:-},%X{spanId:-}]
 logging.include-application-name=false
 management.tracing.sampling.probability=1
+management.zipkin.tracing.endpoint=http://${SPRING_CLOUD_ZIPKIN_HOST:localhost}:9411/api/v2/spans
+spring.cloud.consul.host=${SPRING_CLOUD_CONSUL_HOST:localhost}
+spring.cloud.consul.port=8500
 
 
 ##logging.level.org.apache.kafka.clients.producer=DEBUG ##lead to deadlock
 
 #---
 spring.config.activate.on-profile=docker
+spring.kafka.bootstrap-servers=${SPRING_CLOUD_KAFKA_HOST}:9092
