--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -55,7 +55,7 @@ logging:
     level: "[${spring.application.name:-},%X{traceId:-},%X{spanId:-}] "
   include-application-name: false
   level:
-    reactor.netty: DEBUG
+    #reactor.netty: DEBUG
     org.springframework.cloud.gateway.handler.predicate: trace
     #io.micrometer: TRACE
 
