--- a/multiplication/src/main/resources/application.properties
+++ b/multiplication/src/main/resources/application.properties
@@ -8,31 +8,20 @@ spring.jpa.hibernate.ddl-auto=update
 # For educational purposes we will show the SQL in console
 # spring.jpa.show-sql=true
 
-kafka.attempts=attempts.topic
-kafka.attempts.partitions=4
-kafka.attempts.replica-count=1
+rocketmq.attempts=attempts.topic
 
 logging.level.org.springframework.kafka.core.KafkaAdmin=DEBUG
-#spring.config.import=optional:consul:
+spring.cloud.nacos.server-addr=${SPRING_CLOUD_NACOS_HOST:localhost}:8848
 
 #multiplication app as a producer
-spring.kafka.bootstrap-servers=${SPRING_CLOUD_KAFKA_HOST:localhost}:9094
-spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
-spring.kafka.template.observation-enabled=true
-spring.kafka.listener.observation-enabled=true
+rocketmq.name-server=${SPRING_CLOUD_ROCKETMQ_HOST:localhost}:9876
+rocketmq.producer.group=multiplication
 
 ##working with default logback configuration for distributed tracing
 logging.pattern.level=[${spring.application.name:-},%X{traceId:-},%X{spanId:-}]
 logging.include-application-name=false
 management.tracing.sampling.probability=1
 management.zipkin.tracing.endpoint=http://${SPRING_CLOUD_ZIPKIN_HOST:localhost}:9411/api/v2/spans
-spring.cloud.consul.host=${SPRING_CLOUD_CONSUL_HOST:localhost}
-spring.cloud.consul.port=8500
-
-
-##logging.level.org.apache.kafka.clients.producer=DEBUG ##lead to deadlock
 
 #---
 spring.config.activate.on-profile=docker
-spring.kafka.bootstrap-servers=${SPRING_CLOUD_KAFKA_HOST}:9092
