spring cloud alibaba for microservices and rocketmq logback appender

--- a/gamification/src/main/resources/application.properties
+++ b/gamification/src/main/resources/application.properties
@@ -10,37 +10,26 @@ spring.jpa.hibernate.ddl-auto=update
 # spring.jpa.show-sql=true
 
 #config both on the producer and consumer as we donot know which one will start first
-kafka.attempts=attempts.topic
-kafka.attempts.partitions=4
-kafka.attempts.replica-count=1
+rocketmq.attempts=attempts.topic
 
-logging.level.org.springframework.kafka.core.KafkaAdmin=DEBUG
+#logging.level.org.springframework.kafka.core.KafkaAdmin=DEBUG
 #spring.config.import=optional:consul:
 spring.cloud.compatibility-verifier.enabled=false
 
-spring.kafka.template.observation-enabled=true
-spring.kafka.listener.observation-enabled=true
-spring.kafka.bootstrap-servers=${SPRING_CLOUD_KAFKA_HOST:localhost}:9094
-spring.kafka.consumer.group-id=gamification
-spring.kafka.consumer.auto-offset-reset=latest
-spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-#spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
-spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
-spring.kafka.consumer.properties.spring.deserializer.value.delegate.class=org.springframework.kafka.support.serializer.JsonDeserializer
-spring.kafka.consumer.properties.spring.json.trusted.packages=*
-#spring.kafka.consumer.properties.spring.json.use.type.headers=false
-#spring.kafka.consumer.properties.spring.json.value.default.type=microservices.book.event.challenge.ChallengeSolvedEvent
+sspring.cloud.nacos.server-addr=${SPRING_CLOUD_NACOS_HOST:localhost}:8848
+
+#multiplication app as a producer
+rocketmq.name-server=${SPRING_CLOUD_ROCKETMQ_HOST:localhost}:9876
+rocketmq.producer.group=multiplication
+
 
 ##working with default logback configuration for distributed tracing
 logging.pattern.level=[${spring.application.name:-},%X{traceId:-},%X{spanId:-}]
 logging.include-application-name=false
 management.tracing.sampling.probability=1
-
 management.zipkin.tracing.endpoint=http://${SPRING_CLOUD_ZIPKIN_HOST:localhost}:9411/api/v2/spans
-spring.cloud.consul.host=${SPRING_CLOUD_CONSUL_HOST:localhost}
-spring.cloud.consul.port=8500
 
 #---
 spring.config.activate.on-profile=docker
-spring.kafka.bootstrap-servers=${SPRING_CLOUD_KAFKA_HOST}:9092
+
 
