--- a/gamification/src/main/resources/bootstrap.properties
+++ b/gamification/src/main/resources/bootstrap.properties
@@ -1,5 +1,9 @@
-spring.cloud.consul.config.prefixes[0]=config
-spring.cloud.consul.config.format=yaml
-spring.cloud.consul.config.default-context=defaults
-spring.cloud.consul.config.data-key=application.yml
+#spring.cloud.consul.config.prefixes[0]=config
+#spring.cloud.consul.config.format=yaml
+#spring.cloud.consul.config.default-context=defaults
+#spring.cloud.consul.config.data-key=application.yml
 #logging.level.org.springframework.amqp.rabbit.connection.CachingConnectionFactory=WARN
+spring.cloud.nacos.config.serveraddr=127.0.0.1:8848
+spring.cloud.nacos.config.prefix=config
+spring.cloud.nacos.config.group=DEFAULT_GROUP
+spring.cloud.nacos.config.file-extension=yml
