--- a/multiplication/src/main/resources/application.properties
+++ b/multiplication/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 rocketmq.attempts=attempts.topic
 
-logging.level.org.springframework.kafka.core.KafkaAdmin=DEBUG
+#logging.level.org.springframework.kafka.core.KafkaAdmin=DEBUG
 spring.cloud.nacos.server-addr=${SPRING_CLOUD_NACOS_HOST:localhost}:8848
 
 #multiplication app as a producer
