change nacos url

--- a/gamification/src/main/resources/application.properties
+++ b/gamification/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.application.name=gamification
-server.port=8081
 # Gives us access to the H2 database web console
 spring.h2.console.enabled=true
 # Creates the database in a file
@@ -16,7 +15,7 @@ rocketmq.attempts=attempts.topic
 #spring.config.import=optional:consul:
 spring.cloud.compatibility-verifier.enabled=false
 
-sspring.cloud.nacos.server-addr=${SPRING_CLOUD_NACOS_HOST:localhost}:8848
+spring.cloud.nacos.server-addr=${SPRING_CLOUD_NACOS_HOST:localhost}:8848
 
 #multiplication app as a producer
 rocketmq.name-server=${SPRING_CLOUD_ROCKETMQ_HOST:localhost}:9876
