--- a/multiplication/src/main/resources/bootstrap.properties
+++ b/multiplication/src/main/resources/bootstrap.properties
@@ -4,7 +4,7 @@
 #spring.cloud.consul.config.data-key=application.yml
 
 
-spring.cloud.nacos.config.serveraddr=127.0.0.1:8848
+spring.cloud.nacos.config.serveraddr=${SPRING_CLOUD_NACOS_HOST:localhost}:8848
 spring.cloud.nacos.config.prefix=config
 spring.cloud.nacos.config.group=DEFAULT_GROUP
 spring.cloud.nacos.config.file-extension=yml
