--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,24 +13,24 @@ services:
     image: multiplication:0.0.1-SNAPSHOT
     environment:
       - SPRING_PROFILES_ACTIVE=docker
-      - SPRING_CLOUD_CONSUL_HOST=consul
-      - SPRING_CLOUD_KAFKA_HOST=kafka
+      - SPRING_CLOUD_NACOS_HOST=nacos
+      - SPRING_CLOUD_ROCKETMQ_HOST=namesrv
       - SPRING_CLOUD_ZIPKIN_HOST=zipkin
     depends_on:
-      - kafka
-      - consul-importer
+      - namesrv
+      - nacos
     networks:
       - microservices
   gamification:
     image: gamification:0.0.1-SNAPSHOT
     environment:
       - SPRING_PROFILES_ACTIVE=docker
-      - SPRING_CLOUD_CONSUL_HOST=consul
-      - SPRING_CLOUD_KAFKA_HOST=kafka
+      - SPRING_CLOUD_NACOS_HOST=nacos
+      - SPRING_CLOUD_ROCKETMQ_HOST=namesrv
       - SPRING_CLOUD_ZIPKIN_HOST=zipkin
     depends_on:
-      - kafka
-      - consul-importer
+      - namesrv
+      - nacos
     networks:
       - microservices
   gateway:
@@ -40,24 +40,24 @@ services:
       - '8000:8000'
     environment:
       - SPRING_PROFILES_ACTIVE=docker
-      - SPRING_CLOUD_CONSUL_HOST=consul
-      - SPRING_CLOUD_KAFKA_HOST=kafka
+      - SPRING_CLOUD_NACOS_HOST=nacos
+      - SPRING_CLOUD_ROCKETMQ_HOST=namesrv
       - SPRING_CLOUD_ZIPKIN_HOST=zipkin
     depends_on:
-      - kafka
-      - consul-importer
+      - namesrv
+      - nacos
     networks:
       - microservices
   logs:
     image: logs:0.0.1-SNAPSHOT
     environment:
       - SPRING_PROFILES_ACTIVE=docker
-      - SPRING_CLOUD_CONSUL_HOST=consul
-      - SPRING_CLOUD_KAFKA_HOST=kafka
+      - SPRING_CLOUD_NACOS_HOST=nacos
+      - SPRING_CLOUD_ROCKETMQ_HOST=namesrv
       - SPRING_CLOUD_ZIPKIN_HOST=zipkin
     depends_on:
-      - kafka
-      - consul-importer
+      - namesrv
+      - nacos
     networks:
       - microservices
   namesrv:
@@ -81,7 +81,9 @@ services:
       - namesrv
     networks:
       - microservices
-    command: sh mqbroker
+    volumes:
+      - ./config/rocketmq/broker.conf:/home/rocketmq/rocketmq-5.3.0/conf/broker.conf
+    command: sh mqbroker -n namesrv:9876 -c ../conf/broker.conf  
   proxy:
     image: apache/rocketmq:5.3.0
     container_name: rmqproxy
@@ -99,7 +101,7 @@ services:
     command: sh mqproxy
   nacos:
     image: nacos/nacos-server:v2.4.2
-    container_name: nacos-standalone-mysql
+    #container_name: nacos-standalone-mysql
     env_file:
       - ./env/nacos-standlone-mysql.env
     volumes:
