--- a/gateway/src/main/resources/bootstrap.yml
+++ b/gateway/src/main/resources/bootstrap.yml
@@ -16,3 +16,8 @@ spring:
         prefix: config
         server-addr: ${SPRING_CLOUD_NACOS_HOST:localhost}:8848
         file-extension: yml
+      discovery:
+        server-addr: ${SPRING_CLOUD_NACOS_HOST:localhost}:8848
+      #server-addr: ${SPRING_CLOUD_NACOS_HOST:localhost}:8848
+
+
