--- a/multiplication/src/main/resources/bootstrap.properties
+++ b/multiplication/src/main/resources/bootstrap.properties
@@ -3,8 +3,9 @@
 #spring.cloud.consul.config.default-context=defaults
 #spring.cloud.consul.config.data-key=application.yml
 
-
-spring.cloud.nacos.config.serveraddr=${SPRING_CLOUD_NACOS_HOST:localhost}:8848
+#spring.cloud.nacos.server-addr=${SPRING_CLOUD_NACOS_HOST:localhost}:8848
+spring.cloud.nacos.config.server-addr=${SPRING_CLOUD_NACOS_HOST:localhost}:8848
+spring.cloud.nacos.discovery.server-addr=${SPRING_CLOUD_NACOS_HOST:localhost}:8848
 spring.cloud.nacos.config.prefix=config
 spring.cloud.nacos.config.group=DEFAULT_GROUP
 spring.cloud.nacos.config.file-extension=yml
