1. add spring cloud loadbalancer to correct gateway 503 error. 2. change config for docker deployment 3. change topic name to adapt to rocketmq naming conventions

--- a/gamification/src/main/resources/application.properties
+++ b/gamification/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.hibernate.ddl-auto=update
 # spring.jpa.show-sql=true
 
 #config both on the producer and consumer as we donot know which one will start first
-rocketmq.attempts=attempts.topic
+rocketmq.attempts=attempts-topic
 
 #logging.level.org.springframework.kafka.core.KafkaAdmin=DEBUG
 #spring.config.import=optional:consul:
@@ -17,8 +17,6 @@ spring.cloud.compatibility-verifier.enabled=false
 
 #multiplication app as a producer
 rocketmq.name-server=${SPRING_CLOUD_ROCKETMQ_HOST:localhost}:9876
-rocketmq.producer.group=multiplication
-
 
 ##working with default logback configuration for distributed tracing
 logging.pattern.level=[${spring.application.name:-},%X{traceId:-},%X{spanId:-}]
