--- a/multiplication/src/main/resources/application.properties
+++ b/multiplication/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.hibernate.ddl-auto=update
 # For educational purposes we will show the SQL in console
 # spring.jpa.show-sql=true
 
-rocketmq.attempts=attempts.topic
+rocketmq.attempts=attempts-topic
 
 #logging.level.org.springframework.kafka.core.KafkaAdmin=DEBUG
 
@@ -21,6 +21,5 @@ logging.pattern.level=[${spring.application.name:-},%X{traceId:-},%X{spanId:-}]
 logging.include-application-name=false
 management.tracing.sampling.probability=1
 management.zipkin.tracing.endpoint=http://${SPRING_CLOUD_ZIPKIN_HOST:localhost}:9411/api/v2/spans
-
 #---
 spring.config.activate.on-profile=docker
