--- a/gamification/pom.xml
+++ b/gamification/pom.xml
@@ -62,16 +62,11 @@
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
         </dependency>
+        <!--rocketmq-spring-boot-starter 2.3.1 needs rocket-client 5.3.0-->
         <dependency>
             <groupId>org.apache.rocketmq</groupId>
             <artifactId>rocketmq-spring-boot-starter</artifactId>
-            <version>2.3.1</version>
-        </dependency>
-        <!--rocketmq-spring-boot-starter needs rocket-client 5.3.0-->
-        <dependency>
-            <groupId>org.apache.rocketmq</groupId>
-            <artifactId>rocketmq-client</artifactId>
-            <version>5.3.0</version>
+            <version>2.3.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.rocketmq</groupId>
