--- a/multiplication/pom.xml
+++ b/multiplication/pom.xml
@@ -69,17 +69,17 @@
 			<groupId>com.alibaba.cloud</groupId>
 			<artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
 		</dependency>
+		<!--rocketmq-spring-boot-starter 2.3.1 is using rocketmq-client 5.3.0-->
 		<dependency>
 			<groupId>org.apache.rocketmq</groupId>
 			<artifactId>rocketmq-spring-boot-starter</artifactId>
-			<version>2.3.1</version>
+			<version>2.3.0</version>
 		</dependency>
-		<!--rocketmq-spring-boot-starter is using rocketmq-client 5.3.0-->
-		<dependency>
+	<!--	<dependency>
 			<groupId>org.apache.rocketmq</groupId>
 			<artifactId>rocketmq-client</artifactId>
 			<version>5.3.0</version>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>org.apache.rocketmq</groupId>
 			<artifactId>rocketmq-logappender</artifactId>
