add docker host ip for rocketmq(external ip of windows)

--- a/docker/config/rocketmq/broker.conf
+++ b/docker/config/rocketmq/broker.conf
@@ -20,4 +20,5 @@ deleteWhen = 04
 fileReservedTime = 48
 brokerRole = ASYNC_MASTER
 flushDiskType = ASYNC_FLUSH
-brokerIP1=192.168.71.46
+#Docker host IP(Windows/Linux)
+brokerIP1=192.168.71.47
