--- a/multiplication/src/main/resources/application.properties
+++ b/multiplication/src/main/resources/application.properties
@@ -7,12 +7,10 @@ spring.datasource.url=jdbc:h2:file:~/multiplication;AUTO_SERVER=TRUE
 spring.jpa.hibernate.ddl-auto=update
 # For educational purposes we will show the SQL in console
 # spring.jpa.show-sql=true
-
 rocketmq.attempts=attempts-topic
 
 #multiplication app as a producer
-rocketmq.name-server=${SPRING_CLOUD_ROCKETMQ_HOST:localhost}:9876
-rocketmq.producer.group=multiplication
+rocketmq.producer.endpoints=${SPRING_CLOUD_ROCKETMQ_PROXY_HOST:localhost}:8081
 
 ##working with default logback configuration for distributed tracing
 logging.pattern.level=[${spring.application.name:-},%X{traceId:-},%X{spanId:-}]
