change to push consumer

--- a/gamification/src/main/resources/application.properties
+++ b/gamification/src/main/resources/application.properties
@@ -15,10 +15,14 @@ rocketmq.attempts=attempts-topic
 spring.cloud.compatibility-verifier.enabled=false
 
 #multiplication app as a producer
-rocketmq.simple-consumer.endpoints=${SPRING_CLOUD_ROCKETMQ_PROXY_HOST:localhost}:8081
-rocketmq.simple-consumer.filter-expression-type=tag
-rocketmq.simple-consumer.tag=*
-#rocketmq.push-consumer.endpoints=${SPRING_CLOUD_ROCKETMQ_PROXY_HOST:localhost}:8081
+#rocketmq.simple-consumer.endpoints=${SPRING_CLOUD_ROCKETMQ_PROXY_HOST:localhost}:8081
+#rocketmq.simple-consumer.filter-expression-type=tag
+#rocketmq.simple-consumer.tag=*
+
+rocketmq.push-consumer.endpoints=${SPRING_CLOUD_ROCKETMQ_PROXY_HOST:localhost}:8081
+rocketmq.push-consumer.tag=*
+#rocketmq.push-consumer.access-key=
+#rocketmq.push-consumer.secret-key=
 
 ##working with default logback configuration for distributed tracing
 logging.pattern.level=[${spring.application.name:-},%X{traceId:-},%X{spanId:-}]
